# whid

./: .gitignore  README.md  aboutdialog.cpp  aboutdialog.ui  currentworkmodel.cpp  currentworkmodel.h  database.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nodedialog.cpp  nodedialog.h  nodemodel.cpp  nodemodel.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  summarymodel.cpp  summarymodel.h  utility.cpp  utility.h  weekselectiondialog.h  weekselectiondialog.ui  whid.db  whid.pro  workdialog.cpp  workdialog.h  workdialog.ui  workmodel.cpp  workmodel.h
ci/jenkins/: Dockefile.debian-stretch  Dockefile.debian-testing  Dockefile.ubuntu-bionic  Dockefile.ubuntu-xenial  Jenkinsfile  Jenkinsfile-mac.groovy  Jenkinsfile-win.groovy  Jenkinsfile.groovy
db/: whid.db
res/icons/: whid.icns
scripts/: package-deb.sh  package-macos.sh  package-windows.bat
src/: aboutdialog.cpp  currentworkmodel.cpp  currentworkmodel.h  database.cpp  database.h  logging.cpp  logging.h  main.cpp  mainwindow.cpp  mainwindow.h  nodedialog.cpp  nodemodel.cpp  nodemodel.h  reportmodel.cpp  reportmodel.h  settingsdialog.cpp  settingsdialog.h  summaryfilterdialog.cpp  summaryfilterdialog.h  summarymodel.cpp  summarymodel.h  utility.cpp  version.h  weekselectiondialog.cpp  workdialog.cpp  workdialog.h  workmodel.cpp  workmodel.h
ui/: aboutdialog.ui  mainwindow.ui  nodedialog.ui  settingsdialog.ui  summaryfilterdialog.ui  workdialog.ui
whid-1.10/: AUTHORS  COPYING  COPYRIGHT  INSTALL  Makefile.am  README  bootstrap  configure.in  gdb_settings  make_po.sh  pad_file.xml  readme.txt  whid.kdevelop
whid-1.10/Setup/: Whid.warsetup
whid-1.10/database/: Makefile.am  whid_database.xml
whid-1.10/doc/: gpl.rtf  todo.txt  whid_manual_en.odt
whid-1.10/include/: libwhid.h
whid-1.10/include/server/: CustomerI.h  GatewayI.h  HaveChargesI.h  HaveRatesI.h  InvoiceI.h  NodeI.h  ProjectI.h  RateI.h  TaskI.h  UserI.h  WhidControlI.h  WhidEngine.h  WorkI.h
whid-1.10/src/: Makefile.am
whid-1.10/src/client/: AboutDlg.cpp  AboutDlg.h  BillingWiz.cpp  BillingWiz.h  ChooseRateDlg.cpp  ChooseRateDlg.h  Copy of WorkDlg.cpp  Copy of WorkDlg.h  Copy of whid.h  CustomerDlg.cpp  CustomerDlg.h  EmailBillDlg.cpp  EmailBillDlg.h  FilteredList.cpp  FilteredList.h  FirstUseDlg.cpp  FirstUseDlg.h  HTMLReport.cpp  HTMLReport.h  ImageContainer.cpp  ImageContainer.h  InvoiceUtil.cpp  InvoiceUtil.h  LogonDlg.cpp  LogonDlg.h  MainFrame.cpp  MainFrame.h  Makefile.am  MysqlCreateDatabaseDlg.cpp  MysqlCreateDatabaseDlg.h  NewPasswdDlg.cpp  NewPasswdDlg.h  NodeDlg.cpp  NodeDlg.h  NodeRateManager.cpp  NodeRateManager.h  ProjectDlg.cpp  ProjectDlg.h  PropertiesDlg.cpp  PropertiesDlg.h  (+34 more)
whid-1.10/src/client/icons/: Makefile.am
whid-1.10/src/client/icons/128x128/: Makefile.am  project.xcf
whid-1.10/src/client/icons/16x16/: Makefile.am  customer.xpm  project.xpm  task.xpm  work0.xpm  work1.xpm  work2.xpm  work3.xpm  work4.xpm  work5.xpm  work6.xpm
whid-1.10/src/client/icons/32x32/: Makefile.am  add_project.xcf  add_user.xcf  add_work.xcf  new.xcf  new_task.xcf
whid-1.10/src/client/icons/other/: Makefile.am  about_scaled.xcf
whid-1.10/src/libwhid/: ClassTemplate.cpp  ClassTemplate.h  CustomerI.cpp  GatewayI.cpp  HaveChargesI.cpp  HaveRatesI.cpp  InvoiceI.cpp  Makefile.am  NodeI.cpp  ProjectI.cpp  RateI.cpp  TaskI.cpp  UserI.cpp  WhidControlI.cpp  WhidEngine.cpp  WorkI.cpp  whid.idl
whid-1.10/translations/: Makefile.am
whid-1.10/translations/EN/: Makefile.am  whid.po
whid-1.10/translations/nb_NO/: Makefile.am  whid.po
whid-1.10/xml/: Makefile.am  whid_invoice2html.xsl  whid_invoice2html_internal.xsl
